Fixes the export modal content alignment

--- a/src/app/components/admin-app/admin-view-search/admin-view-search.component.scss
+++ b/src/app/components/admin-app/admin-view-search/admin-view-search.component.scss
@@ -6,6 +6,7 @@
   min-width: 800px;
   margin-top: 40px;
   width: 800px;
+  align-content: center;
 }
 
 .mat-table {
@@ -40,4 +41,8 @@
 
 .mat-column-description {
   flex: 1 1 40%;
+}
+
+app-admin-app-view-export {
+  margin-left: 30px;
 }
